# jsonschema-test

./: .flake8  README.md  pyproject.toml
jsonschema_test/: main.py  validator.py
tests/: test_jsonschema_test.py  test_validator.py
