[tool.poetry]
name = "jsonschema-test"
version = "0.1.0"
description = "A test of nested jsonschema inside OpenAPI"
authors = ["deathbeforedishes@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
email-validator = ""
fastapi = ""
jsonschema = ""
uvicorn = ""

[tool.poetry.dev-dependencies]
pyyaml = ""
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
start-app = 'bin.run:main'
